fix: main image shrinking too much.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -61,11 +61,10 @@ ul a {
     max-width: 100vw; /* Set maximum width to 100% */
     max-height: 100vh; /* Set maximum height to 100% of the viewport height */
     overflow: hidden; /* Hide any overflowing content */
-    margin: 1rem 10rem;
 }
 
 #mainImage img {
-    max-width: 100%; /* Ensure the image inside scales down proportionally */
+    max-width: 95%; /* Ensure the image inside scales down proportionally */
     height: auto; /* Maintain the image's aspect ratio */
 }
 
